# THzAutoGaming

./: CMakeLists.txt  LICENSE  README.md  meson.build
include/THzAutoGaming/action/: handler.hpp  iAction.hpp  iTriggerAction.hpp
include/THzAutoGaming/common/: timeDefinitions.hpp
include/THzAutoGaming/input/: common.hpp  emulator.hpp  iDeviationStrategy.hpp  linuxInterface.hpp  normalDeviationStrategy.hpp  parameters.hpp  windowsInterface.hpp
include/THzAutoGaming/optimisation/evolution/: algorithm.hpp
include/THzAutoGaming/simulations/: tileMatchingPuzzle.hpp
include/THzAutoGaming/utility/: commonConditions.hpp  iCondition.hpp  imageLoader.hpp  loopControl.hpp
src/action/: handler.cpp
src/input/: linuxInterface.cpp  normalDeviationStrategy.cpp  parameters.cpp  windowsInterface.cpp
src/simulations/: tileMatchingPuzzle.cpp
src/utility/: commonConditions.cpp  imageLoader.cpp  loopControl.cpp
subprojects/: THzImage.wrap
test/: CMakeLists.txt
test/action/: handler.cpp
test/input/: emulator.cpp  normalDeviationStrategy.cpp  parameters.cpp
test/optimisation/evolution/: algorithm.cpp
test/simulations/: tileMatchingPuzzle.cpp
test/utility/: commonConditions.cpp  imageLoader.cpp  loopControl.cpp
